--- a/style.css
+++ b/style.css
@@ -5,12 +5,17 @@ html, body {
 }
 
 body {
-  background-color: bisque;
+  /*background-color: bisque;*/
+  background: white;
   font-family: 'Zilla Slab', serif;
 }
 
 #flex-wrapper {
-  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -40,10 +45,19 @@ nav a:hover {
 #title {
   font-size: 4em;
   width: fit-content;
-  padding: 0.25em 0.35em;
   margin: 0 auto 1em auto;
+}
+
+#title a {
+  padding: 0.25em 0.35em;
   border-radius: 0.1em;
   background: #FFF5;
+  color: black;
+  text-decoration: none;
+}
+
+#title a:hover {
+  background: #FFFA;
 }
 
 footer {
